--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,6 @@ Week 01/videoB2.avi
 Week 01/videoB2.gif.avi
 Results/
 Week 02/fall/
+Week 04/customVideo.avi
+Week 04/estabilize.avi
+Week 04/traffic.avi
